# API_CRUD

./: Dockerfile-db  README.md  config.py  pyproject.toml  requirements.txt
api_crud/: __init__.py  costumer.py  login.py  models.py  product.py  serializer.py
migrations/versions/: e1af17ce854f_.py
tests/unittest/: flask_test_base.py  test_client_route.py
